# NitroTPM-Tools

./: Cargo.toml  LICENSE  README.md
.github/actions/tpm2-tss/: action.yml
.github/workflows/: ci.yml
LICENSES/: THIRD_PARTY_LICENSES_RUST_CRATES.html
docker/: builder.Dockerfile
nitro-tpm-attest/: Cargo.toml  README.md  build.rs
nitro-tpm-attest/examples/: kms_decrypt.rs
nitro-tpm-attest/src/: lib.rs  main.rs  tpm_manager.rs
nitro-tpm-attest/src/raw/: auth_session.rs  mod.rs  nsm_request.rs
nitro-tpm-attest/src/raw/tpm/: command_buffer.rs  mod.rs  response_buffer.rs
nitro-tpm-attest/src/tss/: context_extension.rs  endorsement_key.rs  message_buffer.rs  mod.rs
nitro-tpm-pcr-compute/: Cargo.toml  README.md
nitro-tpm-pcr-compute/src/: build_info.rs  esl.rs  hasher.rs  main.rs  pcr.rs
