[package]
name = "nitro-tpm-pcr-compute"
version = "1.0.0"
edition = "2024"
authors = ["Marius Knaust <mknaust@amazon.com>"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
authenticode = { version = "0.5", features = ["object", "std"] }
aws-lc-rs = "1.12"
clap = { version = "4.5", features = ["derive"] }
digest = "0.10"
env_logger = "0.11"
log = "0.4"
object = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.16"
x509-cert = "0.2.0"
